# coding_papers_llm_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  insomnia_collection.json  main.py  pyproject.toml
backend/: app.py  models.py
docs/: arch.drawio
src/: devlead.py  graph.py  researcher.py  router.py  state.py  supervisor.py  supervisor_tools.py  tools.py  utils.py
src/agent/: devlead.py  graph.py  researcher.py  state.py  subagent_wrappers.py  supervisor.py  utils.py
src/agent/prompts/: devlead.py  researcher.py  supervisor.py
src/database/: __init__.py  models.py  summary_storage.py
src/prompts/: code_reader.py  devlead.py  researcher.py  router.py  supervisor.py
src/tools/: __init__.py  coding_tools.py  external_memory.py  research_tools.py
